2009-07-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/lightning/content/imip-bar.js: an exception occurs
	when retrieving itip item containing a recurrence-id without a
	master occurence. The exception is caught and we avoid displaying
	the imip bar at that moment.
	Fixed a case where no user calendars belonging to the user would
	be found.

2009-07-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/providers/composite/calCompositeCalendar.js:
	inhibit the prevention of getItems on non-cached-and-caldav
	calendars.

2009-07-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/lightning/content/imip-bar.js: show a spinning
	wheel until the proper message and buttons can be displayed. The
	"requiresNetwork" property is not available on caldav calendars.
	Therefore we only test for the calendar type for updating them.
	Fixed exceptions occuring with CANCEL and REPLY messages.
	Spinning wheel bugs:
	  - a CANCEL request may sometime refer at first to an event that
	    has already been deleted from the calendar, we ignore it in
	    that case.

	* src/calendar/lightning/content/imip-bar-overlay.xul: extracted
	file for further modifications.

2009-07-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calCachedCalendar.js: commented out the
	update timer for cached calendars, since the timer for the views
	already achieves the same effect.

	* src/calendar/lightning/content/imip-bar.js: make better use of
	the CalDAV acls. Ensure the calendars are updated before searching
	the related event.

2009-07-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-ui-utils.js: extracted file
	for further modification
	(appendCalendarItems) add a "tooltiptext" to the calendar menu
	items for large calendar names.

	* src/calendar/base/content/sun-calendar-event-dialog.xul: (new
	file) assigned "id" field and value to the status bar privacy
	labels.
